--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
-	"test": "echo \"Error: no test specified\" && exit 1",
-	"deploy": "node_modules/serverless/bin/serverless deploy",
-	"start": "node_modules/serverless/bin/serverless offline start"
+    "test": "node_modules/jest/bin/jest.js --silent --bail",
+    "deploy": "node_modules/serverless/bin/serverless deploy"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "serverless": "^1.54.0",
-    "serverless-offline": "^5.12.0"
+    "jest": "^24.9.0",
+    "serverless": "^1.54.0"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.549.0",
+    "bluebird": "^3.7.1",
+    "uuid": "^3.3.3"
   }
 }
